split the compliant alt-text doc into two docs, one for general alt-text instructions, one for creating them with ai

--- a/resources/1.2__Writing_Compliant_Alt_Text_with_GenAI/1.2.2__Writing_Compliant_Alt_Text_with_GenAI.md
+++ b/resources/1.2__Writing_Compliant_Alt_Text_with_GenAI/1.2.2__Writing_Compliant_Alt_Text_with_GenAI.md
@@ -1,50 +1,14 @@
-# Writing Accessible and Effective Alt-Text for Images
+# Writing WCAG Compliant Alt-Text with Generative AI
 
-In this short guide, we'll describe the benefits of alt-text for image descriptions, how to write effective alt-text, and offer some guidelines on how to use generative AI to generate alt-text.
+This guideline expands on the information provided in the [Writing Accessible and Effective Alt-Text for Images Guideline](resources\1.2__Writing_Compliant_Alt_Text_with_GenAI\1.2__Writing_WCAG_Compliant_Alt_Text.md). Please review that document to learn more about the benfits and guidelines for effective alt-text.
 
-## Benefits of Alt-Text
+In this short guide, we'll offer some guidelines on how to use generative AI to create write effective alt-text and image descriptions.
 
-Alt-text (alternative text) is essential for making digital content accessible to everyone, including people who use screen readers or have images turned off. Well-written alt-text:
-
-- Provides equal access to information for users with visual impairments.
-- Ensures compliance with accessibility standards (e.g., WCAG, ADA).
-- Enhances user experience for all.
-
-## Guidelines for Effective Alt-Text
-
-### Write Clear, Purposeful Descriptions
-
-- **Be concise:** Use only as many words as are needed to convey the essential information.
-- **Avoid redundancies:** Don’t repeat information already present in surrounding text or captions.
-- **Context matters:** Describe what’s important about the image in its context, not every visual detail.
-- **Match audience language/understanding:** Use terminology appropriate for your readers. Avoid jargon unless relevant for the course content.
-
-### Handle Different Image Types Appropriately
-
-- **Informational:** Describe the content and purpose (e.g., “Bar chart showing sales growth from 2020 to 2024”).
-- **Decorative:** Mark images that do not add informational value as decorative. This means using `alt=""` for images in HTML.
-- **Complex:** Summarize the main point and provide a longer description in the main text if needed (e.g., for infographics).
-- **Functional:** Describe the function, not the appearance (e.g., “Search button”).
-- **Images with text:** Include the text in the alt attribute if it’s not elsewhere.
-
-## Avoid Common Alt-Text Mistakes
-
-- **Avoid generic descriptions:** Don’t use “image of,” “photo of,” or “graphic” unless necessary.
-- **Don’t over-describe details:** Focus on what’s relevant to the context.
-- **Don’t ignore context:** Tailor the description to the image’s purpose in the content.
-
-## Create Detailed Descriptions for Complex Content
-
-- **Data visualizations:** Summarize the key message, trends, or data points.
-- **Maps:** Describe the area shown and any important features or markers.
-- **Screenshots:** Explain what is visible and its relevance.
-- **Unique images (equations, sequences, etc):** Provide a textual equivalent or explanation.
-
-If an image is not offering any additional context or content, mark the image as decorative.
+If you're looking for some example prompts, jump to the [Default Prompts for Different Image Types](#default-prompts-for-different-image-types).
 
 ## Using Generative AI to Create Clear, Purposeful Descriptions
 
-You may need to provide additional context to the AI in order to get effective descriptions. 
+As discussed in the [Writing Accessible and Effective Alt-Text for Images Guideline](resources\1.2__Writing_Compliant_Alt_Text_with_GenAI\1.2__Writing_WCAG_Compliant_Alt_Text.md), the context of your course is often required to get effective descriptions for images.
 
 ### 1. Provide Context and Specificity in Your Prompts
 
@@ -60,7 +24,7 @@ You may need to provide additional context to the AI in order to get effective d
 
 ### 3. Review and Refine as Needed
 
-- **AI can get things wrong:** 
+- **AI can get things wrong:**
   - Always check the generated alt-text for accuracy and clarity.
   - Look for redundancies or unnecessary details.
   - Ensure the description matches the image’s context and purpose.
@@ -69,14 +33,18 @@ You may need to provide additional context to the AI in order to get effective d
 
 - **Cultural context:** AI may miss cultural references or nuances.
 - **Technical content:** AI might omit or misinterpret technical details—review carefully for accuracy.
+- **Hallucinations:** AI sometimes make things up. This is referred to as "hallucinations" by generative AI companies. It is usually caused by extrneous additional information. If you ask for descriptions of many images in the same chat with a generative AI tool, it can sometimes become overwhelmed with data and mix the contents.
 
 ## Examples
+
+This section uses the same examples as our effective alt-text guidelines, but has additional information for when you use a generative AI to create image descriptions for you.
 
 ### Example 1 - a painting
 
 The Ally Course Accessibility Report tool in Canvas uses the following example.
 
 <img src="compliant_alt_text_media\960px-Van_Gogh_-_Feld_mit_Mohnblumen.jpeg" alt-text="" />
+
 (This version of the painting is in the public domain and was pulled from [Wikimedia Commons](https://commons.wikimedia.org/w/index.php?curid=9522155) after being reproduced from an artbook.)  
 
 In the example, Van Gogh's painting, Feld mit Mohnblumen (Field of Poppies), is shown.
@@ -85,9 +53,9 @@ Ally suggests that for an art class, the alt tag might be "A painting by Van Gog
 
 However, for a history class, the alt tag might be "A field covered with poppies. Poppies have become a symbol of remembrance for World War I."
 
-### Getting help from an AI
+#### Getting help from an AI
 
-If you were asking a generative AI for help creating the description for this painting, you should make sure your prompt for a description gives the AI the context it needs to create an effective description that also delivers on the meaning of the image's use in your course.
+When asking a generative AI to create the description for this painting, you should make sure your prompt gives the AI the context it needs to create an effective description that also delivers on the meaning of the image in your course.
 
 Someone's created the [Image Description Specialist](https://chatgpt.com/g/g-OeMRwWONc-image-description-specialist), a custom GPT in ChatGPT based on WCAG guidelines. We can try using this tool to get a descritopn for the Van Gogh image.
 
@@ -106,17 +74,13 @@ When instructed that the image was for a entry level art history course, it offe
 And for a doctorate level art history course, it offered:
 > Expressive landscape with red poppy field, tree line, and dynamic post-impressionist sky, evoking late 19th-century modernism.
 
-Each of these also had a long description, which could have been placed into the main body along side the image.
+Each of generative ai responses also had a long description, which could have been placed into the main body along side the image. If you chose to use the long description in this way, you would want to make the image decorative (`alt=""`).
 
 ### Example 2 - a complex image
 
 <img src="compliant_alt_text_media\paper_open_feeder_guard_xp320_420.jpg" alt-text="" />
 
 This image was taken from a guide on how to load paper into a printer. The text next to the image said only "Flip the feeder guard forward." If that were also used as the alt-text, a screen reader would just repeat that phrase twice.
-
-If you wanted to provide instructions on how to do this for someone who was visually impaired, the best practice would be to describe how it can be done. This would be too more information for an alt-tag, so you'd likely put the full text into the body of the instructions and mark the text as decorative.
-
-> Step 2. You will need to flip the feeder guard forward. You will find the feeder guard located at the back of the top of the printer. Lift up on the back end and then rotate it forward so it is resting on top of the printer cover.
 
 When this image was shared with the ["Image Description Specialist GPT"](https://chatgpt.com/g/g-OeMRwWONc-image-description-specialist), it offered:
 
@@ -126,9 +90,16 @@ The longer description was more useful, but still didn't treat the image as inst
 
 > This instructional image shows a flatbed printer with a close-up inset highlighting how to lift the document cover. The inset focuses on the top-left corner of the cover, showing a hand gripping and rotating the cover upward. The highlighted portion of the cover is shaded blue to indicate the area to lift.
 
-When asked to try again and to give an instructional description, it changed the long description to a bulleted set of steps, but the alt-text appears to be incorrect:
+When asked to try again and to give an instructional description for someone who was visually impaired, it changed the long description to a much more useful bulleted set of steps, but the instructions were incorrect after quite a few tries.
 
-> Grasp and lift the top-left corner of the printer cover to open the scanner.
+Here's one example:
+
+> 1. Locate the printer in front of you with the paper output tray facing toward you.
+> 2. Place one hand on the front edge of the flat top panel.
+> 3. With your fingers underneath the front lip, gently lift the panel upward.
+> 4. Continue lifting until the top cover is fully raised, exposing the glass scanner bed beneath.
+
+For an image this complex, the amount of prompting you may need to get a useful description may be more work than writing that description yourself.
 
 ### Example 3 - A chart with data
 
@@ -142,7 +113,9 @@ When this image was shared with the ["Image Description Specialist GPT"](https:/
 
 > Bar chart showing U.S. adult AI assistant usage: Other 33%, OpenAI 28%, Google 23%, Meta 18%, Amazon 18%, Apple 16%.
 
-While that does a fairly good job of describing the content of the chart, if the specifics are importent to the context of the lesson or course, you may want to move more of the details to the main body of the text. For example, while the alt-text does correctly show that the "Other" category is 33%, it doesn't designate which AI are listed. The specialist GPT also offered the following long description:
+While that does a fairly good job of describing the content of the chart, if the specifics are importent to the context of the lesson or course, you may want to move more of the details to the main body of the text. For example, while the alt-text does correctly show that the "Other" category is 33%, it doesn't designate which AI are listed. 
+
+The specialist GPT also offered the following long description:
 
 > A horizontal bar chart titled "The AI Assistants Consumers Reach for First" with the subtitle "Total General AI Assistant Usage Among All U.S. Adults." Percentages represent usage rates:
 OpenAI – 28% (logo shown)
@@ -154,9 +127,9 @@ Other – 33% (includes Claude, DeepSeek, Grok, Microsoft Copilot, and Perplexit
 
 Not only does this longer description break down who was listed in the "Other" category, but it also did a better job of helping establish that OpenAI had the largest share, when compared to how the alt-text description listed "Other" first.
 
-The ["Image Description Specialist GPT"](https://chatgpt.com/g/g-OeMRwWONc-image-description-specialist) also offered a full transcription of all text in the image.
+However, it also added text to inform the audience that it showed logos for each company, which is not important to the context of the chart.
 
-For detailed charts with a lot of important data, it's likely going to be necessary to copy any important data into the main body of the document or a larger description of an image that isn't part of a document.
+For detailed charts with a lot of important data, it's likely going to be necessary to copy any important data into the main body of the document or a larger description of an image that isn't part of a document. When doing this, you should make the chart decorative (`alt=""`).
 
 ## Default Prompts for Different Image Types
 
@@ -224,7 +197,14 @@ If you don't want to use the specialist GPT shared above, here are some default 
 
 ## Template for Context-Specific Prompts
 
-Finally, here is a template for creating a context-specific prompt if none of the above examples work for you.
+Finally, here is a template for creating a context-specific prompt if none of the above examples work for you. 
+To use this, you'll need to give the ai additional information:
+
+- [image type]
+- [course subject]
+- [audience level]
+- [topic / concept]
+- [specific aspect relevant to your content]
 
 ```Text
 "Create WCAG 2.2 compliant alt-text for this [image type] used in a [course subject] for [audience level]. 
