Remove quiz references

--- a/resources/2.2__Creating_Interactive_Content_with_GenAI/2.2__Creating_Interactive_Content_with_GenAI.md
+++ b/resources/2.2__Creating_Interactive_Content_with_GenAI/2.2__Creating_Interactive_Content_with_GenAI.md
@@ -1,6 +1,6 @@
 # Using Generative AI to Create Interactive Content
 
-Interactive content engages students actively in their learning through activities like quizzes, polls, simulations, branching scenarios, and multimedia experiences. Generative AI can help you design and develop these interactive elements efficiently while maintaining educational effectiveness and accessibility.
+Interactive content engages students actively in their learning through activities like polls, simulations, branching scenarios, and multimedia experiences. Generative AI can help you design and develop these interactive elements efficiently while maintaining educational effectiveness and accessibility.
 
 This guide provides strategies for leveraging AI tools to create engaging, interactive learning experiences that promote student participation and deeper understanding.
 
@@ -13,7 +13,7 @@ Use AI to generate interactive content that aligns with specific educational obj
 - **Learning Objective Alignment**: Start by clearly defining what students should achieve. Your prompts for generative AI should be specific and include:
 - your goals for the students:
 
-> "Create an interactive quiz that helps students practice identifying logical fallacies in arguments."
+> "Create an interactive activity that helps students practice identifying logical fallacies in arguments."
 
 - **Activity Type Selection**: Ask AI to suggest appropriate interactive formats for your goals 
 
@@ -24,30 +24,6 @@ Use AI to generate interactive content that aligns with specific educational obj
 > "Design a series of interactive exercises that start with basic concepts and progress to advanced applications."
 
 - **Immediate Feedback**: Have AI create interactive content that provides immediate feedback and tracks learning progress.
-
-### Generate Engaging Quiz and Assessment Content
-
-Leverage AI to create varied, thoughtful assessment activities.
-
-- **Question Variety**: Ask AI for multiple ways to rephrase a question, or for a set of questions about a specific topic.
-
-> "Create 5 multiple choice, 3 short answer, and 2 scenario-based questions about market economics."
-
-> "Create alternate ways of asking the following question:"
-
-- **Realistic Scenarios**: Ask AI for context-rich questions.
-
-> "Design case study questions that present real-world marketing challenges for students to solve."
-
-- **Distractor Quality**: Ask AI for help generating plausible 'wrong' answers for multiple choice or true/false questions.
-
-> "Create plausible but incorrect answer choices that address common misconceptions about climate change."
-
-> "Create plausible but incorrect answers choices for the following question."
-
-- **Adaptive Difficulty**: Generate questions at different complexity levels to accommodate diverse learners.
-
-> "Use Bloom's Taxonomy to generate questions about climate change at the understanding, analyzing, and evaluating levels of knowledge."
 
 ### Create Branching Scenarios and Simulations
 
@@ -118,3 +94,4 @@ Test with a small group first to identify usability issues and learning effectiv
 ## Want to learn more about Interactive Content or using Generative AI?
 
 ### insert schedule-a-meeting tool
+
